hphp/test/slow/protected_internal/property_narrower_override_1.php.expectf
Fatal error: Access level to B::$foo must be protected internal (as in class A) or weaker in %s on line 10
